--- a/templates/blocks/header.html
+++ b/templates/blocks/header.html
@@ -3,7 +3,7 @@
 <meta name="description" content="Цифровое издание об искусстве, современной культуре, веб-проектах, музыке, литературе и образе жизни">
 <META NAME="ROBOTS" CONTENT="NOINDEX, FOLLOW">
 <link rel="stylesheet" type="text/css" href="/public/main.css">
-<link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=PT+Sans&subset=cyrillic-ext,latin-ext' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
